Fixes a bad alignment in tables page

--- a/public/stylesheets/admin/tables/dashboard.css
+++ b/public/stylesheets/admin/tables/dashboard.css
@@ -9,7 +9,7 @@ section#content div.inner_content div.notification div.middle_white p {display:i
 section#content div.inner_content div.notification div.middle_white a.close {position:absolute; top:12px; right:13px; width:17px; height:17px; background:url('/images/admin/icons/close_button.png') no-repeat 0 0; text-indent:-9999px;}
 section#content div.inner_content div.notification div.middle_white a.close:hover {background-position:0 -17px;}
 section#content div.inner_content div.notification div.bottom_white {width:906px; height:8px; padding:0; margin: 0 0 10px 0; background:url('/images/admin/backgrounds/bottom_white_long.png') no-repeat 0 bottom;}
-                                      
+
 
 section#content div.inner_content div.requests_info div.top_white {width:906px; height:7px; padding:0; background:url('/images/admin/backgrounds/top_white_long.png') no-repeat 0 0;}
 section#content div.inner_content div.requests_info div.middle_white {position:relative; width:846px; padding:25px 30px 24px; background:url('/images/admin/backgrounds/middle_white_long.png') repeat-y 0 0;}
@@ -47,7 +47,7 @@ section#content div.left div.middle_white_medium ul li {float:left; width:570px;
 section#content div.left div.middle_white_medium ul li.last {padding:25px 25px 18px 25px; border:none;}
 section#content div.left div.middle_white_medium ul li:hover {background:#F4F8F8; cursor:pointer;}
 section#content div.left div.middle_white_medium ul li div.meta_info {float:left; width:100%;}
-section#content div.left div.middle_white_medium ul li div.meta_info span.info {float:left; width:330px; margin:0;}
+section#content div.left div.middle_white_medium ul li div.meta_info span.info {float:left; width:340px; margin:0;}
 
 section#content div.left div.middle_white_medium ul li h4 {float:left; width:auto; max-width:180px; letter-spacing:-1px; text-overflow:ellipsis; overflow:hidden; white-space:nowrap;}
 section#content div.left div.middle_white_medium ul li h4 a {font:bold 21px Arial; color:#333333; letter-spacing:-1px; text-decoration:none; line-height:26px; margin: 0 0 0 0;}
@@ -62,7 +62,7 @@ section#content div.left div.middle_white_medium ul li div.meta_info span.info p
 section#content div.left div.middle_white_medium ul li div.meta_info span.info p.columns strong {color: #333333; font-weight: normal;}
 section#content div.left div.middle_white_medium ul li:hover div.meta_info span.info p.delete {display:block;}
 
-section#content div.left div.middle_white_medium ul li div.meta_info span.tags {float:right; width:240px;}
+section#content div.left div.middle_white_medium ul li div.meta_info span.tags {float:right; width:230px;}
 section#content div.left div.middle_white_medium ul li div.meta_info span.tags p.last_op {float:right; width:224px; margin:4px 0 0 0; padding:0 18px 7px 0; font:normal 13px Arial; color:#999999; background:url('/images/admin/icons/clock.png') no-repeat right 1px; text-align:right; opacity:0.7;}
 section#content div.left div.middle_white_medium ul li div.meta_info span.tags a {float:right; padding:2px 7px; margin:4px 3px 0 0; font:normal 11px Arial; color:#999999; text-decoration:none; background:#D8E7E9; border-radius:2px; -webkit-border-radius:2px; -moz-border-radius:2px;}
 section#content div.left div.middle_white_medium ul li div.meta_info span.tags a:hover {color:#333333!important; background:#C2DADD;}
